--- a/Estilos css/Style.css
+++ b/Estilos css/Style.css
@@ -1,5 +1,27 @@
-body {
-    color: rgb(123, 80, 80);
-    text-align: center;
-    font-family: "Arial";
+* {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+}
+html {
+    font-size: 62.5%;
+}
+.nav {
+    margin-top: 10px;
+    list-style: none;
+    padding-left: 0;   
+}
+.nav li {
+    display: inline-block;
+    font-size: 2rem;
+    font-family:Verdana, Geneva, Tahoma, sans-serif;
+}
+.main-nav__item:hover {
+    color: brown;
+}
+.main-nav__item:active {
+    color: purple;
+}
+.main-nav__item::after {
+    content: " | ";
 }
