--- a/Estilos css/Style.css
+++ b/Estilos css/Style.css
@@ -10,6 +10,7 @@ html {
     margin-top: 10px;
     list-style: none;
     padding-left: 0;   
+    background-color: aquamarine;
 }
 .nav li {
     display: inline-block;
