modifique las galletas de mani y el color de la imagen

--- a/Estilos css/Style.css
+++ b/Estilos css/Style.css
@@ -32,7 +32,7 @@ html {
 .decoracion {
     font-size: 2rem;
     color: white;
-    background-color: red;
+    background-color: blue;
     width: 30rem;
     text-align: center;
     
