cambio en mani con pasas e imagen amarilla

--- a/Estilos css/Style.css
+++ b/Estilos css/Style.css
@@ -33,7 +33,7 @@ html {
 .decoracion {
     font-size: 2rem;
     color: white;
-    background-color: red;
+    background-color: yellow;
     width: 30rem;
     text-align: center;
     
